feat: 全面优化前后端功能
主要更新：
- 实现图片上传功能（时代、角色、日记、记忆等）
- 添加管理后台系统（系统数据管理、管理员登录）
- 实现本地优先的数据同步策略
- 添加角色增删改查的详细日志
- 修复admin登录黑屏问题
- 优化前后端数据流和错误处理
- 添加DTO模式和Mapper工具
- 完善图片存储服务（支持本地存储，可扩展OSS/S3）
- 添加全面的调试日志